adds action to create release and tag

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,6 +31,8 @@ jobs:
         uses: miguelteixeiraa/release-notes-from-pullrequests-action@main
         with:
           next-tag: ${{ inputs.next-tag }}
-      - name: Test
-        run: echo ${{ steps.generate-release-notes.outputs.release-notes }}
+      - uses: avakar/tag-and-release@v1
+        with:
+          tag_name: "v${{ inputs.next-tag }}"
+          body: "${{ steps.generate-release-notes.outputs.release-notes }}"
 
