adds github.token

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,4 +35,5 @@ jobs:
         with:
           tag_name: "v${{ inputs.next-tag }}"
           body: "${{ steps.generate-release-notes.outputs.release-notes }}"
+          token: ${{ github.token }}
 
