fix permissions for create release action

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,8 @@ concurrency:
 
 jobs:
   release:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     environment: pypi
     steps:
@@ -31,7 +33,7 @@ jobs:
         uses: miguelteixeiraa/release-notes-from-pullrequests-action@main
         with:
           next-tag: ${{ inputs.next-tag }}
-      - uses: ncipollo/release-action@v1
+      - uses: ncipollo/release-action@6c75be85e571768fa31b40abf38de58ba0397db5
         with:
           tag: "v${{ inputs.next-tag }}"
           commit: ${{ github.sha }}
