configure poetry to publish package

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,9 +34,9 @@ jobs:
         with:
           next-tag: ${{ inputs.next-tag }}
       - name: Publish to PyPI
-        run: |
+        run: po|
           poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
-          poetry publish
+          poetry publish --build
       - name: Create GitHub Release
         uses: ncipollo/release-action@6c75be85e571768fa31b40abf38de58ba0397db5
         with:
